Make phone and email site variables.

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ description:         Strategic communication
 tagline:             Strategic communication
 url:                 https://www.ashbright.com
 logo:                images/LOGO-RGB.png
+tel:                 +971 50 220 6916
+email:               ta@ashbright.com
 
 collections:
   situations:
