--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title:               Ashbright
 description:         Strategic communication
 tagline:             Strategic communication
 url:                 https://www.ashbright.com
-logo:                images/LOGO-RGB.png
+logo:                /images/LOGO-RGB.png
 tel:                 +971 50 220 6916
 email:               ta@ashbright.com
 
