--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:         Strategic communication
 tagline:             Strategic communication
 url:                 https://www.ashbright.com
 logo:                /images/LOGO-RGB.png
-tel:                 +971 50 220 6916
+tel:                 +971502206916
 email:               ta@ashbright.com
 
 collections:
