Fix up situation (singular) and schema markup for email / phone.

--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,18 @@ exclude: ["node_modules", "gulpfile.js", "package.json"]
 
 # Setup
 title:               Ashbright
-description:         Strategic communication
+description:         "We are strategic communications firm that provides counsel to governments, companies and successful individuals."
 tagline:             Strategic communication
 url:                 https://www.ashbright.com
 logo:                /images/LOGO-RGB.png
 tel:                 +971502206916
 email:               ta@ashbright.com
+calltoaction:        "Get in touch"
+address:
+  name:              ASHBRIGHT DWC-LLC
+  region:            Dubai
+  postcode:          712472
+  country:           UAE
 
 collections:
   situations:
