--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: github
   repo: wearethoughtfox/ashbright # Path to your Github repository
   branch: master # Branch to update (master by default)
 
