--- a/admin/config.yml
+++ b/admin/config.yml
@@ -22,3 +22,15 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Body", name: "body", widget: "markdown"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+
+  - name: "settings"
+    label: "Settings"
+    editor:
+      preview: false
+    files:
+      - name: "general"
+        label: "Site Settings"
+        file: "_config.yml"
+        description: "General Site Settings"
+        fields:
+          - {label: "Site title", name: "title", widget: "string"}
