--- a/admin/config.yml
+++ b/admin/config.yml
@@ -34,3 +34,8 @@ collections: # A list of collections the CMS should be able to edit
         description: "General Site Settings"
         fields:
           - {label: "Site title", name: "title", widget: "string"}
+          - {label: "Site description", name: "description", widget: "string"}
+          - {label: "Site tagline", name: "tagline", widget: "string"}
+          - {label: "Site email", name: "email", widget: "string"}
+          - {label: "Site telephone", name: "tagline", widget: "string"}
+          - {label: "Site call to action", name: "calltoaction", widget: "string"}
