--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ collections:
   situations:
     output: true
     permalink: /:collection/:name
+  bios:
+    output: true
+    permalink: /:name
 
 plugins:
   - jekyll-seo-tag
