--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,6 +23,22 @@ collections: # A list of collections the CMS should be able to edit
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
 
+  - name: "bios" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Biographies" # Used in the UI, ie.: "New Post"
+    folder: "_bios" # The path to the folder where the documents are stored
+    sort: "title:asc" # Default is title:asc
+    create: true # Allow users to create new documents in this collection
+    slug: "{{category}}-{{slug}}"
+    fields: # The fields each document in this collection have
+      - {label: "Layout", name: "layout", widget: "hidden", default: "bio"}
+      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
+      - {label: "Image", name: "image", widget: "image"}
+      - {label: "Name", name: "bio-name", widget: "string"}
+      - {label: "Title", name: "bio-title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+    meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+
   - name: "settings"
     label: "Settings"
     editor:
