Cleaned up Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ logo:                /images/LOGO-RGB.png
 tel:                 +971502206916
 email:               ta@ashbright.com
 calltoaction:        "Get in touch"
+analytics:           106864288
 address:
   name:              ASHBRIGHT DWC-LLC
   region:            Dubai
