--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Ashbright
 markdown: kramdown
 highlighter: rouge
-exclude: ["node_modules", "gulpfile.js", "package.json"]
+exclude: ["node_modules", "gulpfile.js", "package.json", "_redirects"]
 
 # Setup
 title:               Ashbright
